# quantum-bug-rag

./: .gitignore  LICENSE  README.md  config.example.yaml  pyproject.toml  quantum-software-bug-detection-rag-project-v6_classical.ipynb  quantum-vs-classical-bug-prediction.ipynb  quantum_bug_detecttion_taxonomy.ipynb  requirements.txt
data/: README.md
data/bugs4q/: README.md
docs/: documentation_reference.md  methodology.md  methodology_and_architecture.md  paper_master_context.md
knowledge_base/: README.md  bug_patterns.json  taxonomy.json  taxonomy_mapping_hints.json
outputs/: README.md
scripts/: compare_runs.py  create_bugs4q_splits.py  generate_paper_figures.py  inspect_dataset.py  inspect_knowledge_base.py  prepare_bugs4q.py  prepare_bugs_qcp.py  prepare_bugsqcp_kb.py  reproducible_runner.py  run_classical_vs_quantum.py  run_prompt_only.py  run_rag.py  run_static_baseline.py  run_study_i_codebert.py  run_subset_eval.py  run_taxonomy_v6.py
src/: __init__.py  baselines.py  benchmark_runner.py  benchmark_splits.py  bugs4q_labels.py  bugsqcp_ingest.py  data_prep.py  dataset_loader.py  evaluate.py  knowledge_base_inspect.py  knowledge_ingest.py  llm_client.py  prompt_builder.py  retriever.py  schemas.py  utils.py
src/classical/: __init__.py  analysis.py  dataset.py  evaluator.py  kb.py  llm.py  prompts.py  retriever.py  schemas.py
tests/: __init__.py  test_baselines.py  test_benchmark_construction.py  test_bugsqcp_ingest.py  test_dataset_loader.py  test_llm_client.py  test_pipeline_integration.py  test_retriever.py  test_schemas.py  test_study_i.py
(+15 files in other folders)
